# rust_data_analysis

./: .gitignore  Cargo.toml  README.md
notebooks/: Cargo.toml  ndarray.ipynb  polars_data_analysis.ipynb
src/: main.rs
