[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[dependencies]
blas-src = "0.9.0"
chrono = "0.4.31"
either = "1.9.0"
evcxr = "0.17.0"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
ndarray-rand = "0.14.0"
plotters = "0.3.6"
polars = "0.41.3"
smartcore = "0.3.2"
statrs = "0.16.0"
